--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,9 @@ nav {
 
 nav a,
 nav li {
+    padding: 5px;
+    background-color: var(--divColorAltered);
+    border-radius: 10px;
     color: white;
     list-style: none;
     text-decoration: none;
@@ -43,12 +46,13 @@ main {
 }
 
 header {
-    margin: 30px;
+    margin: 4%;
     padding: 20px;
     background-color: var(--divColor);
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 15px;
 }
 
 header h1 {
@@ -62,17 +66,58 @@ header h1 {
     align-items: center;
 }
 
-.text {
-    margin-top: 80px;
-}
-
-
 .wrapper {
     display: flex;
     justify-content: center;
 }
 
+#imageContainer{
+    margin: 6%;
+}
+
+table {
+    border-collapse: collapse;
+    border: 2px solid rgb(200, 200, 200);
+    margin-bottom: 5%;
+}
+
+td,
+th {
+    border: 1px solid gray;
+    padding: 25px 50px;
+    background-color: var(--divColor)
+}
+
+th {
+    background-color: var(--divColorAltered)
+}
+
+td {
+    text-align: center;
+}
+
 footer {
-    background-color: var(--background);
-    height: 100px;
+    display: flex;
+    flex-direction: row;
+    height: 80px;
+    width: 100%;
+    background-color: var(--divColor);
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+footer a,
+footer li,
+footer i{
+    color: white;
+    list-style: none;
+    text-decoration: none;
+}
+footer a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    background-color: var(--divColorAltered);
+    border-radius: 10px;
 }
