--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+html,
+body {
+    background-color: var(--background);
+}
+
 :root {
     --divColor: #162447;
     --divColorAltered: #0c1731;
@@ -71,10 +76,6 @@ header h1 {
     justify-content: center;
 }
 
-#imageContainer{
-    margin: 6%;
-}
-
 table {
     border-collapse: collapse;
     border: 2px solid rgb(200, 200, 200);
@@ -104,20 +105,47 @@ footer {
     background-color: var(--divColor);
     align-items: center;
     justify-content: space-evenly;
+    margin-top: 6%;
 }
 
 footer a,
 footer li,
-footer i{
+footer i {
     color: white;
     list-style: none;
     text-decoration: none;
 }
-footer a{
+
+footer a {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 10px;
     background-color: var(--divColorAltered);
     border-radius: 10px;
+}
+
+@media only screen and (max-width: 768px) {
+    .content {
+        width: 95%;
+    }
+
+    header {
+        margin: 6%;
+    }
+
+    header h1 {
+        text-align: center;
+        font-size: 2.3rem;
+    }
+
+    td,
+    th {
+        padding: 20px;
+    }
+
+    footer a {
+        text-align: center;
+    }
+
 }
