--- a/css/styleAlunni.css
+++ b/css/styleAlunni.css
@@ -1,3 +1,16 @@
+td,
+th {
+    padding: 20px 45px;
+}
+
 td:nth-child(1) {
     background-color: var(--divColorAltered)
+}
+
+@media only screen and (min-width: 768px) {
+
+    td,
+    th {
+        padding: 30px;
+    }
 }
