--- a/css/styleOraro.css
+++ b/css/styleOraro.css
@@ -2,3 +2,11 @@ td,
 th {
     padding: 20px 45px;
 }
+
+@media only screen and (max-width: 768px) {
+
+    td,
+    th {
+        padding: 7px;
+    }
+}
