--- a/css/styleProfessori.css
+++ b/css/styleProfessori.css
@@ -1,3 +1,17 @@
+td,
+th {
+    padding: 20px 45px;
+}
+
 td:nth-child(1) {
     background-color: var(--divColorAltered)
+}
+
+@media only screen and (max-width: 768px) {
+    td,
+    th {
+        font-size: 0.8rem;
+        padding: 7px;
+    }
+    
 }
