--- a/css/styleAlunni.css
+++ b/css/styleAlunni.css
@@ -7,10 +7,9 @@ td:nth-child(1) {
     background-color: var(--divColorAltered)
 }
 
-@media only screen and (min-width: 768px) {
-
+@media only screen and (max-width: 768px) {
     td,
     th {
-        padding: 30px;
+        padding: 12px;
     }
 }
