--- a/css/styleOraro.css
+++ b/css/styleOraro.css
@@ -4,9 +4,15 @@ th {
 }
 
 @media only screen and (max-width: 768px) {
-
+    table {
+        width: 100%;
+    }
+    .wrapper {
+        overflow-x: auto;
+    }
     td,
     th {
-        padding: 7px;
+        padding: 2px;
+        font-size: 0.7rem;
     }
 }
