--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 
 html,
 body {
+    font-family: 'Poppins', sans-serif;
     background-color: var(--background);
     height: 100%;
 }
@@ -44,7 +45,6 @@ a:visited {
 
 main {
     width: 100%;
-    height: 100%;
     background-color: var(--background);
     display: flex;
     justify-content: center;
@@ -67,6 +67,7 @@ header h1 {
 
 .content {
     width: 70%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
