--- a/css/style.css
+++ b/css/style.css
@@ -71,16 +71,13 @@ header h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: auto;
 }
 
 .text{
     margin: 3%;
 }
 
-.wrapper {
-    display: flex;
-    overflow-x: auto;
-}
 
 table {
     border-collapse: collapse;
@@ -134,7 +131,12 @@ footer a {
 
 @media only screen and (max-width: 768px) {
     .content {
-        width: 95%;
+        width: 90%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        overflow-x: auto;
     }
 
     header {
