--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html,
 body {
     font-family: 'Poppins', sans-serif;
     background-color: var(--background);
-    height: 100%;
+    height: auto;
 }
 
 nav {
@@ -47,7 +47,9 @@ main {
     width: 100%;
     background-color: var(--background);
     display: flex;
+    align-items: center;
     justify-content: center;
+    flex-direction: column;
     color: #fff;
 }
 
@@ -66,39 +68,47 @@ header h1 {
 }
 
 .content {
-    width: 70%;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow-x: auto;
 }
 
-.text{
+.text {
     margin: 3%;
+}
+
+.wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 70%;
+    overflow-x: auto;
 }
 
 
 table {
     border-collapse: collapse;
     border: 2px solid rgb(200, 200, 200);
-    margin-bottom: 5%;
     width: 100%;
 }
 
 td,
 th {
+    padding: 5px;
     border: 1px solid gray;
-    padding: 25px 50px;
+    width: auto;
+    height: 100px;
     background-color: var(--divColor)
-}
-
-th {
-    background-color: var(--divColorAltered)
 }
 
 td {
     text-align: center;
+}
+
+th {
+    background-color: var(--divColorAltered)
 }
 
 footer {
@@ -131,7 +141,7 @@ footer a {
 
 @media only screen and (max-width: 768px) {
     .content {
-        width: 90%;
+        width: 100%;
         height: 100%;
         display: flex;
         flex-direction: column;
@@ -148,15 +158,40 @@ footer a {
         font-size: 2.3rem;
     }
 
-    td,
-    th {
-        padding: 20px;
+    footer {
+        margin: 0;
     }
 
     footer a {
         padding: 6px;
         text-align: center;
         font-size: 0.8rem;
+    }
+
+    nav {
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        height: auto;
+        width: 21%;
+    }
+
+    nav a {
+
+        font-size: 0.7rem;
+    }
+
+    table {
+        font-size: 0.8rem;
+    }
+
+    .wrapper {
+        width: 94%;
+    }
+
+    .element {
+        display: flex;
+        flex-direction: row;
     }
 
 }
