--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,36 @@
 
 html,
 body {
+  min-width: 100%;
+  max-width: 100%;
   font-family: 'Poppins', sans-serif;
   background-color: var(--background);
   height: auto;
+}
+
+.navbar{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.classe{
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  padding: 20px;
+}
+
+.classe h2, img{
+  padding: 20px;
+  border-radius: 20px;
+  background-color: var(--divColor);
+}
+
+.content img{
+  margin-top: 80px;
 }
 
 nav {
