--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,6 @@ footer {
   background-color: var(--divColor);
   align-items: center;
   justify-content: space-evenly;
-  margin-top: 6%;
 }
 
 footer a,
@@ -168,6 +167,16 @@ footer a {
   padding: 10px;
   background-color: var(--divColorAltered);
   border-radius: 10px;
+}
+
+.oraDiv{
+  margin-top: 6%;
+  align-self: flex-end;
+  padding: 20px;
+  background-color: var(--divColor);
+  width: 100%;
+  text-align: center;
+  color: white;
 }
 
 @media only screen and (max-width: 768px) {
