--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ a:visited {
 }
 
 main {
+  min-width: 75%;
   width: 100%;
   background-color: var(--background);
   display: flex;
@@ -116,6 +117,22 @@ header h1 {
   overflow-x: auto;
 }
 
+.wrapAside {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.container {
+  width: 75%;
+}
+
+aside {
+  margin: 20px;
+  width: 100%;
+  height: 100%;
+}
+
 table {
   border-collapse: collapse;
   border: 2px solid rgb(200, 200, 200);
@@ -151,6 +168,7 @@ footer {
   background-color: var(--divColor);
   align-items: center;
   justify-content: space-evenly;
+  margin-top: 6%;
 }
 
 footer a,
@@ -171,7 +189,6 @@ footer a {
 }
 
 .oraDiv {
-  margin-top: 6%;
   align-self: flex-end;
   padding: 20px;
   background-color: var(--divColor);
@@ -199,10 +216,6 @@ footer a {
     font-size: 2.3rem;
   }
 
-  footer {
-    margin: 0;
-  }
-
   footer a {
     padding: 6px;
     text-align: center;
@@ -227,10 +240,5 @@ footer a {
 
   .wrapper {
     width: 94%;
-  }
-
-  .element {
-    display: flex;
-    flex-direction: row;
   }
 }
