--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,7 @@ footer a {
   width: 100%;
   text-align: center;
   color: white;
+  border-radius: 20px;
 }
 
 @media only screen and (max-width: 768px) {
