--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,10 @@ footer a {
   border-radius: 20px;
 }
 
+.oraDiv img {
+  width: 350px;
+}
+
 @media only screen and (max-width: 768px) {
   .content {
     width: 100%;
